# bevy_ios_iap

./: .gitignore  CHANGELOG.md  Makefile  Package.swift  README.md  SWIFT_BRIDGE.md  justfile
.github/: FUNDING.yml
.github/workflows/: cd.yml  ci.yml
RustXcframework.xcframework/: .gitignore  Info.plist
RustXcframework.xcframework/ios-arm64/Headers/: bevy_ios_iap.h
RustXcframework.xcframework/ios-arm64_x86_64-simulator/Headers/: bevy_ios_iap.h  module.modulemap
Sources/bevy_ios_iap/: BevyIosIAP.swift  Observer.swift  SwiftBridgeCore.swift  bevy_ios_iap.swift
Tests/bevy_ios_iapTests/: bevy_ios_iapTests.swift
bevy_ios_iap/: .gitignore  Cargo.toml  build-rust-release.sh  build-rust.sh  build.rs  justfile
bevy_ios_iap/src/: lib.rs  methods.rs  native.rs  plugin.rs  request.rs  response.rs  transaction.rs
bevy_ios_iap_egui/: CHANGELOG.md  Cargo.toml  README.md
bevy_ios_iap_egui/src/: lib.rs
