[package]
name = "bevy_ios_iap"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
bevy_app = { version = "0.13", default-features = false }
bevy_ecs = { version = "0.13", default-features = false }
bevy_ecs_macros = { version = "0.13", default-features = false }
bevy_log = { version = "0.13", default-features = false }

# [target.'cfg(target_os = "ios")'.dependencies]
bevy_crossbeam_event = "0.5"
swift-bridge = "0.1"

[build-dependencies]
swift-bridge-build = "0.1"
