[package]
name = "bevy_ios_iap"
version = "0.1.1"
edition = "2021"
build = "build.rs"
readme = "../README.md"
license = "MIT"
authors = ["extrawurst <mail@rusticorn.com>"]
documentation = "https://docs.rs/bevy_ios_iap"
repository = "https://github.com/rustunit/bevy_ios_iap"
keywords = ["bevy", "gamedev", "mobile", "ios", "swift"]
description = "Bevy Plugin and Swift Package to provide access to iOS native StoreKit2 from inside Bevy Apps"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
bevy_app = { version = "0.13", default-features = false }
bevy_ecs = { version = "0.13", default-features = false }
bevy_ecs_macros = { version = "0.13", default-features = false }
bevy_log = { version = "0.13", default-features = false }
bevy_crossbeam_event = "0.5"
swift-bridge = "0.1"

[build-dependencies]
swift-bridge-build = "0.1"
